moved app-info api implementation to sandbox controller
